add comments for easier adding of values later